<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.auth.SignUpActivity">

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_180sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/email"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txtSignup"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:hint="@string/email"
        android:textColorHint="@color/colorTextHint"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:background="@drawable/background_search"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"/>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/passwordtxt"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"/>
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:textColorHint="@color/colorTextHint"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:background="@drawable/background_search"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"/>
</androidx.constraintlayout.widget.ConstraintLayout>